# en_banc

./: .dockerignore  .gitignore  .localstack  EN_BANC_OTEL.md  Pulumi.local.yaml  Pulumi.yaml  README.md  __main__.py  alembic.ini  data_warehouse_plan.md  hello.py  mise.toml  prefect.yaml  pyproject.toml  simple_m2m_legal_proceedings.mermaid  simple_m2m_missing_fields.md
.claude/: settings.json
.claude/skills/pulumi-prefect/: SKILL.md
alembic/: env.py
alembic/versions/: 0f95588863c9_add_extracted_citations_table.py  2a94a3378b88_add_content_dedup_with_m2m_observations.py  391c62effce1_add_conn_jud_ct_gov_schema_and_raw_.py  b3e7d1a24f09_add_corrections_tables.py  bf6486dd4388_add_sync_state_table.py  fa1af62c8f44_create_warehouse_provenance_and_ala_.py
app/: Pulumi.yaml  __main__.py
docker/: .dockerignore  Dockerfile  Dockerfile.worker  docker-compose.local-archive.yml  docker-compose.yml  entrypoint.sh  lgtm.yml  worker-entrypoint.sh
docker/.localstack/cache/: machine.json
docker/django/: Dockerfile
docker/localstack/cache/: machine.json
docs/: DIVERGENCE.md  Makefile  conf.py  data-flow.drawio  data-flow.rst  deployment.rst  index.rst  infrastructure.rst  kent.rst  prefect_courtlistener_worker.md  scraper-flows.rst  sqlmesh_prefect_integration.md  the-plan.rst  workflow_orchestration.rst
docs/_build/: .buildinfo  .buildinfo.bak  genindex.html  index.html  kent.html  objects.inv  searchindex.js  warehouse.html  workflow_orchestration.html
docs/_build/.doctrees/: environment.pickle  (+4 more)
docs/sql/: _sqlmesh_dag.mmd  _sqlmesh_dag.rst  index.rst  sqlmesh-processing-order.rst
flows/: archive.py  follow_up.py  litestream.py  local_archive.py  process_citations.py  s3_archive.py  scraper_run.py  scrapers.py  shutdown.py  sqlmesh_tasks.py  sqs_listener.py  transcribe_oral_arguments.py  warehouse_load.py
infrastructure/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  courtlistener.py  databases.py  local_aws.py  pgadmin.py  prefect.py  workers.py
infrastructure/prefect/: prefect.py  prefect_aws_resources.py  prefect_deployments.py
kent_worker/: .dockerignore  Dockerfile  pyproject.toml  worker-entrypoint.sh
kent_worker/flows/: litestream.py  scraper_run.py
kent_worker/workers/: in_process.py
scripts/: sqlmesh_dag_to_mermaid.py  trigger_and_send.py
sql_processing/: config.yaml
sql_processing/audits/: assert_dates_not_future.sql  assert_no_null_docket_numbers.sql  assert_valid_court_ids.sql
sql_processing/external_models/: ala_publicportal.yaml  conn_jud_ct_gov.yaml  corrections.yaml  observations.yaml  warehouse.yaml
sql_processing/macros/: helpers.py
sql_processing/models/: court_ids.sql
sql_processing/seeds/: court_ids.csv
sql_processing/tests/: test_ala_stg_dockets.yaml  test_ala_stg_opinions.yaml  test_conn_stg_dockets.yaml  test_conn_stg_opinion_clusters.yaml  test_courtlistener_dockets.yaml
warehouse/: __init__.py  loader.py  models.py  raw_tables.py  register.py  validation.py
workers/: in_process.py  run_one.py  telemetry.py
(+368 files in other folders)
