[project]
name = "en-banc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.39",
    "aiosqlite>=0.22.1",
    "jkent[operational]",
    "juriscraper",
    "zstandard>=0.25.0",
    "prefect>=3.6.13",
    "prefect-aws>=0.5.0",
    "prefect-docker>=0.6.0",
    "pulumi>=3.218.0",
    "pulumi-aws>=6.0.0",
    "pulumi-local>=1.3.0",
    "pulumi-prefect",
]

[tool.uv.sources]
jkent = { path = "../jkent", editable = true }
juriscraper = { path = "../juriscraper", editable = true }
pulumi-prefect = { path = "infrastructure/sdks/prefect", editable = true }
