[project]
name = "en-banc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.39",
    "aiosqlite>=0.22.1",
    "jkent[operational]",
    "juriscraper",
    "zstandard>=0.25.0",
    "prefect>=3.6.13",
    "prefect-aws>=0.5.0",
    "prefect-docker>=0.6.0",
    "pulumi>=3.218.0",
    "pulumi-aws>=6.0.0",
    "pulumi-local>=1.3.0",
    "pulumi-prefect",
    # OpenTelemetry SDK + exporter + instrumentors. jkent depends only on the
    # OTel *API* (opentelemetry-distro), emitting no-ops until en_banc configures
    # an SDK here; see EN_BANC_OTEL.md. The instrumentors cover jkent's HTTP
    # transport (httpx), its per-run SQLite engine (sqlalchemy), and en_banc's
    # S3 uploads (botocore).
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-instrumentation-sqlalchemy",
    "opentelemetry-instrumentation-botocore",
    "opentelemetry-instrumentation-asyncio",
]

[tool.uv.sources]
jkent = { path = "../jkent", editable = true }
juriscraper = { path = "../juriscraper", editable = true }
pulumi-prefect = { path = "infrastructure/sdks/prefect", editable = true }
