[project]
name = "kent-worker"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "kent[persistent-driver,web]",
    "juriscraper",
    "prefect>=3.6.13",
    "prefect-aws>=0.5.0",
    "pyyaml>=6.0",
    "uvicorn>=0.34.0",
    "boto3>=1.42.39",
    "aiosqlite>=0.22.1",
    "zstandard>=0.25.0",
]

[tool.uv.sources]
kent = { path = "../../kent", editable = true }
juriscraper = { path = "../../juriscraper", editable = true }
